--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -500,6 +500,7 @@
       </svg>
     </a>
   </div>
+  <button type="button" class="btn btn-primary">Primary</button>
 
   <!-- Footer -->
   <footer>
