--- a/frontend/src/app/components/create-user/create-user.component.html
+++ b/frontend/src/app/components/create-user/create-user.component.html
@@ -1,1 +1,9 @@
-<p>create-user works!</p>
+
+<h3>User Details</h3>
+<form>
+    <input type="text" class="form-control" id="name" placeholder="Name"  [(ngModel)]="user.name" name="name"/> 
+    <input type="text" class="form-control mt-2" id="age" placeholder="Age"  [(ngModel)]="user.age" name="age"/>
+    <input type="text" class="form-control mt-2" id="description" placeholder="Description" [(ngModel)]="user.description" name="description"/>
+    <button type="submit" class="btn btn-success mt-3" (click)="createUser()">Create <i class="fas fa-plus-circle"></i></button>
+</form>
+    
