--- a/frontend/src/app/components/edit-user/edit-user.component.html
+++ b/frontend/src/app/components/edit-user/edit-user.component.html
@@ -7,7 +7,7 @@
                 <input type="text" class="form-control" id="name" placeholder="Name" name="name" [(ngModel)]="currentUser!.name"/> 
                 <input type="text" class="form-control mt-2" id="age" placeholder="Age"  [(ngModel)]="currentUser!.age" name="age"/>
                 <input type="text" class="form-control mt-2" id="description" placeholder="Description" [(ngModel)]="currentUser!.description" name="description"/>
-                <button type="submit" class="btn btn-success mt-3" (click)="updateUser()">Update</button>
+                <button class="btn btn-success mt-3" (click)="updateUser()">Update</button>
             </form>
         </div>    
     </div>
