--- a/frontend/src/app/components/users/users.component.css
+++ b/frontend/src/app/components/users/users.component.css
@@ -7,5 +7,10 @@
 }
 
 .edit-color{
-color: #007bff
+    color: #007bff
+}
+
+.right-container{
+    display: flex;
+    justify-content: flex-end;
 }
