--- a/frontend/src/app/components/users/users.component.html
+++ b/frontend/src/app/components/users/users.component.html
@@ -1,4 +1,8 @@
-<table class="table">
+<div class="container">
+  <div class="right-container">
+    <button class="btn btn-success mt-3" [routerLink]="['/create']"><i class="fas fa-user-plus"></i> Create user</button>
+  </div>
+  <table class="table mt-3">
     <thead class="thead-dark">
       <tr>
         <th scope="col">Name</th>
@@ -12,7 +16,8 @@
         <th>{{ user.name }}</th>
         <td>{{ user.age }}</td>
         <td>{{ user.description }}</td>
-        <td><i class="far fa-edit my-fa-style mr-2 edit-color"></i><i class="far fa-trash-alt my-fa-style trash-color"></i></td>
+        <td><a [routerLink]="['/edit', user._id]"><i class="far fa-edit my-fa-style mr-2 edit-color"></i></a><a (click)="deleteUser(user._id)"><i class="far fa-trash-alt my-fa-style trash-color"></i></a></td>
       </tr>
     </tbody>
   </table>
+</div>
